# serializer version: 1
# name: test_list_example
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/example.json
          example-f8a3cb91
  
    ''',
  })
# ---
# name: test_list_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_list_invalid_target_skip_invalid
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      [PROJECT_ROOT]/scenarios/example.json
          example-f8a3cb91
  
    ''',
  })
# ---
# name: test_list_no_sources
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      requires-package-does-not-exist-3cb60d4c
      requires-exact-version-does-not-exist-e7132fc5
      requires-greater-version-does-not-exist-0e488e8f
      requires-less-version-does-not-exist-1a4076bc
      transitive-requires-package-does-not-exist-22a72022
      example-f8a3cb91
      excluded-only-version-2bc4455f
      excluded-only-compatible-version-5b90a629
      dependency-excludes-range-of-compatible-versions-e59e1cd1
      dependency-excludes-non-contiguous-range-of-compatible-versions-ed41451f
      extra-required-c9be513b
      missing-extra-79fd9a92
      multiple-extras-required-14317535
      extra-incompatible-with-extra-afa38951
      extra-incompatible-with-extra-not-requested-5c305dd9
      extra-incompatible-with-root-743dac5a
      extra-does-not-exist-backtrack-a35e4442
      direct-incompatible-versions-f75c56e2
      transitive-incompatible-with-root-version-812a0fda
      transitive-incompatible-with-transitive-74531fe0
      package-only-prereleases-e2dbc237
      package-only-prereleases-in-range-4e199000
      requires-package-only-prereleases-in-range-global-opt-in-af391f9c
      requires-package-prerelease-and-final-any-81dbab9d
      package-prerelease-specified-only-final-available-2ee8f3f9
      package-prerelease-specified-only-prerelease-available-dd6b1e32
      package-prerelease-specified-mixed-available-794fce4d
      package-multiple-prereleases-kinds-256d4e16
      package-multiple-prereleases-numbers-ac82d3fb
      transitive-package-only-prereleases-9da8532e
      transitive-package-only-prereleases-in-range-c41a54fc
      transitive-package-only-prereleases-in-range-opt-in-96f98f65
      transitive-prerelease-and-stable-dependency-3d5eb91f
      transitive-prerelease-and-stable-dependency-opt-in-6192ec57
      transitive-prerelease-and-stable-dependency-many-versions-bcd0f988
      transitive-prerelease-and-stable-dependency-many-versions-holes-5cee052e
      requires-python-version-does-not-exist-d004e577
      requires-python-version-less-than-current-5e520203
      requires-python-version-greater-than-current-62394505
      requires-python-version-greater-than-current-patch-7b98f5af
      requires-python-version-greater-than-current-many-fd1f719c
      requires-python-version-greater-than-current-backtrack-b2677f9a
      requires-python-version-greater-than-current-excluded-34ee1c3e
      requires-incompatible-python-version-compatible-override-006fed96
      requires-compatible-python-version-incompatible-override-8c1b0389
      requires-incompatible-python-version-compatible-override-no-wheels-b8ee1c03
      requires-incompatible-python-version-compatible-override-no-wheels-available-system-ae5b2665
      requires-incompatible-python-version-compatible-override-no-compatible-wheels-c0ea406a
      requires-incompatible-python-version-compatible-override-other-wheel-08a4e843
      requires-python-patch-version-override-no-patch-2e1edfd6
      requires-python-patch-version-override-patch-compatible-844899bd
      specific-tag-and-default-ce63fb65
      only-wheels-08df4319
      no-wheels-0a9090ba
      no-wheels-with-matching-platform-b595b358
  
    ''',
  })
# ---
# name: test_list_no_target_finds_all_valid_scenarios
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/does-not-exist.json
          requires-package-does-not-exist-3cb60d4c
          requires-exact-version-does-not-exist-e7132fc5
          requires-greater-version-does-not-exist-0e488e8f
          requires-less-version-does-not-exist-1a4076bc
          transitive-requires-package-does-not-exist-22a72022
      scenarios/example.json
          example-f8a3cb91
      scenarios/excluded.json
          excluded-only-version-2bc4455f
          excluded-only-compatible-version-5b90a629
          dependency-excludes-range-of-compatible-versions-e59e1cd1
          dependency-excludes-non-contiguous-range-of-compatible-versions-ed41451f
      scenarios/extras.json
          extra-required-c9be513b
          missing-extra-79fd9a92
          multiple-extras-required-14317535
          extra-incompatible-with-extra-afa38951
          extra-incompatible-with-extra-not-requested-5c305dd9
          extra-incompatible-with-root-743dac5a
          extra-does-not-exist-backtrack-a35e4442
      scenarios/incompatible-versions.json
          direct-incompatible-versions-f75c56e2
          transitive-incompatible-with-root-version-812a0fda
          transitive-incompatible-with-transitive-74531fe0
      scenarios/prereleases.json
          package-only-prereleases-e2dbc237
          package-only-prereleases-in-range-4e199000
          requires-package-only-prereleases-in-range-global-opt-in-af391f9c
          requires-package-prerelease-and-final-any-81dbab9d
          package-prerelease-specified-only-final-available-2ee8f3f9
          package-prerelease-specified-only-prerelease-available-dd6b1e32
          package-prerelease-specified-mixed-available-794fce4d
          package-multiple-prereleases-kinds-256d4e16
          package-multiple-prereleases-numbers-ac82d3fb
          transitive-package-only-prereleases-9da8532e
          transitive-package-only-prereleases-in-range-c41a54fc
          transitive-package-only-prereleases-in-range-opt-in-96f98f65
          transitive-prerelease-and-stable-dependency-3d5eb91f
          transitive-prerelease-and-stable-dependency-opt-in-6192ec57
          transitive-prerelease-and-stable-dependency-many-versions-bcd0f988
          transitive-prerelease-and-stable-dependency-many-versions-holes-5cee052e
      scenarios/requires-python.json
          requires-python-version-does-not-exist-d004e577
          requires-python-version-less-than-current-5e520203
          requires-python-version-greater-than-current-62394505
          requires-python-version-greater-than-current-patch-7b98f5af
          requires-python-version-greater-than-current-many-fd1f719c
          requires-python-version-greater-than-current-backtrack-b2677f9a
          requires-python-version-greater-than-current-excluded-34ee1c3e
          requires-incompatible-python-version-compatible-override-006fed96
          requires-compatible-python-version-incompatible-override-8c1b0389
          requires-incompatible-python-version-compatible-override-no-wheels-b8ee1c03
          requires-incompatible-python-version-compatible-override-no-wheels-available-system-ae5b2665
          requires-incompatible-python-version-compatible-override-no-compatible-wheels-c0ea406a
          requires-incompatible-python-version-compatible-override-other-wheel-08a4e843
          requires-python-patch-version-override-no-patch-2e1edfd6
          requires-python-patch-version-override-patch-compatible-844899bd
      scenarios/wheels.json
          specific-tag-and-default-ce63fb65
          only-wheels-08df4319
          no-wheels-0a9090ba
          no-wheels-with-matching-platform-b595b358
  
    ''',
  })
# ---
# name: test_list_no_versions
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/does-not-exist.json
          requires-package-does-not-exist
          requires-exact-version-does-not-exist
          requires-greater-version-does-not-exist
          requires-less-version-does-not-exist
          transitive-requires-package-does-not-exist
      scenarios/example.json
          example
      scenarios/excluded.json
          excluded-only-version
          excluded-only-compatible-version
          dependency-excludes-range-of-compatible-versions
          dependency-excludes-non-contiguous-range-of-compatible-versions
      scenarios/extras.json
          extra-required
          missing-extra
          multiple-extras-required
          extra-incompatible-with-extra
          extra-incompatible-with-extra-not-requested
          extra-incompatible-with-root
          extra-does-not-exist-backtrack
      scenarios/incompatible-versions.json
          direct-incompatible-versions
          transitive-incompatible-with-root-version
          transitive-incompatible-with-transitive
      scenarios/prereleases.json
          package-only-prereleases
          package-only-prereleases-in-range
          requires-package-only-prereleases-in-range-global-opt-in
          requires-package-prerelease-and-final-any
          package-prerelease-specified-only-final-available
          package-prerelease-specified-only-prerelease-available
          package-prerelease-specified-mixed-available
          package-multiple-prereleases-kinds
          package-multiple-prereleases-numbers
          transitive-package-only-prereleases
          transitive-package-only-prereleases-in-range
          transitive-package-only-prereleases-in-range-opt-in
          transitive-prerelease-and-stable-dependency
          transitive-prerelease-and-stable-dependency-opt-in
          transitive-prerelease-and-stable-dependency-many-versions
          transitive-prerelease-and-stable-dependency-many-versions-holes
      scenarios/requires-python.json
          requires-python-version-does-not-exist
          requires-python-version-less-than-current
          requires-python-version-greater-than-current
          requires-python-version-greater-than-current-patch
          requires-python-version-greater-than-current-many
          requires-python-version-greater-than-current-backtrack
          requires-python-version-greater-than-current-excluded
          requires-incompatible-python-version-compatible-override
          requires-compatible-python-version-incompatible-override
          requires-incompatible-python-version-compatible-override-no-wheels
          requires-incompatible-python-version-compatible-override-no-wheels-available-system
          requires-incompatible-python-version-compatible-override-no-compatible-wheels
          requires-incompatible-python-version-compatible-override-other-wheel
          requires-python-patch-version-override-no-patch
          requires-python-patch-version-override-patch-compatible
      scenarios/wheels.json
          specific-tag-and-default
          only-wheels
          no-wheels
          no-wheels-with-matching-platform
  
    ''',
  })
# ---
# name: test_list_one_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_list_short_names
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/does-not-exist.json
          3cb60d4c
          e7132fc5
          0e488e8f
          1a4076bc
          22a72022
      scenarios/example.json
          f8a3cb91
      scenarios/excluded.json
          2bc4455f
          5b90a629
          e59e1cd1
          ed41451f
      scenarios/extras.json
          c9be513b
          79fd9a92
          14317535
          afa38951
          5c305dd9
          743dac5a
          a35e4442
      scenarios/incompatible-versions.json
          f75c56e2
          812a0fda
          74531fe0
      scenarios/prereleases.json
          e2dbc237
          4e199000
          af391f9c
          81dbab9d
          2ee8f3f9
          dd6b1e32
          794fce4d
          256d4e16
          ac82d3fb
          9da8532e
          c41a54fc
          96f98f65
          3d5eb91f
          6192ec57
          bcd0f988
          5cee052e
      scenarios/requires-python.json
          d004e577
          5e520203
          62394505
          7b98f5af
          fd1f719c
          b2677f9a
          34ee1c3e
          006fed96
          8c1b0389
          b8ee1c03
          ae5b2665
          c0ea406a
          08a4e843
          2e1edfd6
          844899bd
      scenarios/wheels.json
          ce63fb65
          08df4319
          0a9090ba
          b595b358
  
    ''',
  })
# ---
# name: test_list_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
